knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/cisco_webex__Webex_Record_Link__c.object-meta.xml
<CustomObject>
    <label>Webex Record Link</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Webex Record Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webex Record Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>