knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Campaign__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Webex Record Links</relationshipLabel>
    <relationshipName>Webex_Record_Links</relationshipName>
    <type>Lookup</type>
</CustomField>