knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Host_Email__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Host_Email__c</fullName>
    <description>Host Email for scheduled meetings.</description>
    <label>Host Email</label>
    <type>Email</type>
</CustomField>