knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Linked_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Linked_Record_Id__c</fullName>
    <label>Linked Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>