knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Meeting_Date__c</fullName>
    <label>Meeting Date</label>
    <type>DateTime</type>
</CustomField>