knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Number_Of_Successful_Records__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Number_Of_Successful_Records__c</fullName>
    <description>Field used to capture number of successful upsert after Syn operation</description>
    <label>Number Of Successful Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>