knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Webinar_Import_Status__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webinar_Import_Status__c</fullName>
    <label>Webinar Import Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Partial Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>