knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/fields/cisco_webex__Webinar_Last_Import_Time__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webinar_Last_Import_Time__c</fullName>
    <label>Webinar Last Import Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>