knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/listViews/cisco_webex__All.listView-meta.xml
<ListView>
    <fullName>cisco_webex__All</fullName>
    <columns>NAME</columns>
    <columns>cisco_webex__Linked_Record_Id__c</columns>
    <columns>cisco_webex__Meeting_Id__c</columns>
    <columns>cisco_webex__Space_Id__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>ang</value>
    </filters>
    <label>All</label>
</ListView>