knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Record_Link__c/listViews/cisco_webex__Webinar_Record_Links.listView-meta.xml
<ListView>
    <fullName>cisco_webex__Webinar_Record_Links</fullName>
    <columns>NAME</columns>
    <columns>cisco_webex__Webinar_ID__c</columns>
    <columns>cisco_webex__Webinar_Import_Status__c</columns>
    <columns>cisco_webex__Number_Of_Failed_Records__c</columns>
    <columns>cisco_webex__Number_Of_Successful_Records__c</columns>
    <columns>cisco_webex__Webinar_Last_Import_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cisco_webex__Linked_Object_Name__c</field>
        <operation>equals</operation>
        <value>webinar_import_record_link</value>
    </filters>
    <label>Webinar Record Links</label>
</ListView>